# njx

./: default.nix  delete_generations.py  fixes.nix  flake.nix  installed.py  lib.nix  private.nix  pyproject.toml  tag.nu
dot/: alacritty.toml  config.nu  fcitx5-profile  gdbinit  himalaya.toml  niri.kdl  notmuch-config  offlineimaprc  tmux.conf  waybar.jsonc  waybar.nix
mod/: base.nix  binfmt.nix  bluetooth.nix  bpir4.nix  btspeaker.nix  common-home-nushell-env.nix  common.nix  default.nix  digital-ocean.nix  dlna.nix  docker.nix  extra-initrd.nix  foot.nix  graphical.nix  he-tunnel.nix  helix.nix  home.nix  leakrets.nix  log-to-aws.nix  logbash.nix  mail.nix  manual.nix  nix-lowprio.nix  njx-cache.nix  not-a-router.nix  openspeedtest.nix  pi3.nix  pkgs-cross.nix  powercap.nix  prometheus-fix.nix  prometheus-nvml-exporter.nix  protect-boot.nix  sftpgo.nix  sharkwire.nix  slim-qemu.nix  slim.nix  source-flakes.nix  ssh-unlock.nix  synapse-utilities.nix  sysrq.nix  (+2 more)
nod/: configuration.nix  flake.nix  home.nix
pkgs/: cgroup-memory-prometheus-ex.nix  colmap.nix  contextily.nix  cykhash.nix  cyrly.nix  default.nix  dirge.nix  ferrosonic.nix  gegensprech.nix  ghcr-login.nix  gtfs-lite.nix  helix.nix  helix.patch  junix.nix  kage.nix  maki.nix  minimodem.nix  neolink.nix  njx.nix  nushell-plugin-file.nix  nushell-plugin-plotters.nix  opentripplanner.nix  planetutils.nix  prometheus-nvml-exporter.nix  pyanidb.nix  pyrobuf.nix  pyrosm.nix  ratune.nix  rowserext.nix  rq.nix  ruri.nix  seeed-2mic-blinky.nix  subtui.nix  vector-cloudwatchsyslogs.nix  windsurf.nix  zerostack.nix
(+45 files in other folders)
