[project]
name = "njx"
version = "0.1.0"

[project.scripts]
njx-installed = "installed:main"
njx-delete-generations = "delete_generations:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["installed", "delete_generations"]
